--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=api-phonebook
 
-
 #server
 server.port=9000
 server.servlet.context-path=/
-
 
 # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,8 +12,8 @@ spring.datasource.password=phonebook
 
 # mybatis
 mybatis.config-location=classpath:mybatis/configuration.xml
-
-
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.javaex.model
 
 #한글처리
 server.servlet.encoding.charset=UTF-8
